# trek

./: .clang-format  CMakeLists.txt  Makefile  Makefile.linux  README.txt  abandon.c  attack.c  autover.c  capture.c  cgetc.c  check_out.c  checkcond.c  compkl.c  computer.c  damage.c  damaged.c  dcrept.c  destruct.c  dock.c  dumpgame.c  dumpme.c  dumpssradio.c  events.c  externs.c  getcodi.c  getpar.c  getpar.h  help.c  impulse.c  initquad.c  kill.c  klmove.c  lose.c  lrscan.c  main.c  move.c  nova.c  out.c  phaser.c  play.c  (+18 more)
